Fixed diff grid-template-column values btwn .top-grid and .grid class, which resolved gaps issue on smaller desktp viewports. Created README.md and LICENSE.md files

--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ a {
 }
 
 header {
-  width: 100vw;
-  height: 100vh;
   background-image: url('assets/images/img-1.jpg');
   background-repeat: no-repeat;
   /* Update the size so it takes 100% of available space */
@@ -40,14 +38,14 @@ header {
   font-family: "PT Sans";
   font-weight: bold;
   font-size: 10vw;
-  grid-row-start: 3;
+  grid-row-start: 2;
   margin: 0px 5vw;
 }
 
 /*Add grid rule set and properties here:*/
 .top-grid {
   display: grid;
-  grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+  grid-template: 1fr 3fr / repeat(2, 1fr);
 }
 
 .grid {
@@ -64,7 +62,6 @@ header {
   /*Add properties here:*/
   grid-row: 1 / 2;
   grid-column: 1 / span 8;
-  align: left;
   margin-top: 20px;
 }
 
@@ -123,26 +120,26 @@ header {
 
 h2 {
 	color: #BBBBBB;
-	font-family: "PT Serif";
+	font-family: "PT Serif", Georgia, serif;
 	font-size: 36px;
-	line-height: 50px;
+	line-height: 1.4em;
 }
 
 h3 {
 	color: #FFFFFF;
-	font-family: "PT Sans";
+	font-family: "PT Sans", Arial, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 	letter-spacing: 3px;
-	line-height: 18px;
+	line-height: 1.3em;
 }
 
 h4 {
 	color: #FFFFFF;
-	font-family: "PT Serif";
+	font-family: "PT Serif", Georgia, serif;
 	font-size: 16px;
 	font-weight: bold;
-	line-height: 20px;
+	line-height: 1.25em;
 	text-align: justify;
 }
 
@@ -155,41 +152,38 @@ h4 {
 
 .text {
   color: #D3D3D3;
-  font-family: "PT Serif";
-  font-size: 16px;
-  line-height: 20px;
+  font-family: "PT Serif", Georgia, serif;
+  font-size: 18px;
+  line-height: 1.25em;
   text-align: justify;
 }
 
 .quote {
   	color: #8840A7;
-  	font-family: "PT Serif";
+  	font-family: "PT Serif", Georgia, serif;
   	font-size: 36px;
   	font-style: italic;
-  	line-height: 50px;
+  	line-height: 1.4em;
 }
 
 .oprah {
 	color: #FFFFFF;
-	font-family: "PT Sans";
+	font-family: "PT Sans", Arial, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 	letter-spacing: 3px;
-	line-height: 18px;
+	line-height: 1.3em;
 }
 
 .info {
   color: #8840A7;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 16px;
   font-weight: bold;
-  line-height: 20px;
+  line-height: 1.25rem;
 }
 
 @media(max-width: 920px) {
-header {
-  height: 75vh;
-}
 
   .teresa-jenkins {
     grid-row-start: 2;
@@ -203,87 +197,76 @@ header {
 
   .grid {
     display: grid;
-    grid-template: 2fr 1fr repeat(2, 1fr) 1fr 1fr 2fr repeat(2, 1fr) / 50vw 50vw;
-    grid-gap: 0px;
+    grid-template: 1fr / 100%;
+    grid-gap: 50px;
     overflow: hidden;
     margin-left: 0;
     margin-right: 0;
     padding-bottom: 3vh;
-    /*align-content: center; */
+    align-content: center;
+  }
+
+  .text-content-1, .text-content-2, .text-content-3, .text-content-4, .text-content-5, .quote-content {
+    grid-column: 1;
+    margin-left: 11vw;
+    margin-right: 11vw;
   }
 
   .subheader-content{
     /*Add properties here:*/
     grid-row: 2 / span 1;
-    grid-column: 1 / 13;
-    align: center;
+    grid-column: 1;
     text-align: center;
-    margin-bottom: 5vh;
+    margin-top: 0px;
   }
 
   /*Add text-content-1 rule set and properties here:*/
   .text-content-1 {
     grid-row: 3 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
   }
   /*Add text-content-2 rule set and properties here:*/
   .text-content-2 {
     grid-row: 4 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
   }
   /*Add text-content-3 rule set and properties here:*/
   .text-content-3 {
     grid-row: 6 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
   }
   /*Add text-content-4 rule set and properties here:*/
   .text-content-4 {
     grid-row: 8 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
-    margin-bottom: 8vh;
   }
   /*Add text-content-5 rule set and properties here:*/
   .text-content-5 {
     grid-row: 9 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
   }
+
+  .top-grid > p {
+    width: 50%;
+  }
+
   /*Add quote-content rule set and properties here:*/
   .quote-content {
     grid-row: 5 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
-    margin-top: 3vh;
+    margin-top: 0vh;
   }
   /*Add image-content rule set and properties here:*/
   .image-content{
+    display: flex;
+    align-content: center;
+    justify-content: center;
     grid-row: 7 / span 1;
-    grid-column: 1 / 13;
-    margin-left: 11vw;
-    margin-right: 11vw;
-    align: center;
+    grid-column: 1;
     padding-bottom: 0;
-    margin-bottom: 0;
   }
 
   .info-content {
     /*Add properties here:*/
     grid-row: 1 / span 1;
-    grid-column: 1 / 13;
-    padding-top: 8vh;
+    grid-column: 1;
     margin-bottom: 3vh;
     text-align: center;
-    align: center;
+    padding: 4vh 0;
   }
 
   .line {
@@ -291,7 +274,6 @@ header {
   }
 
   .inset_image {
-    height: 47vh;
     padding-top: 8vh;
   }
 
@@ -301,26 +283,23 @@ header {
   }
 
   h3 {
-  	font-size: 3vw;
+  	font-size: 2.2vw;
   	letter-spacing: 3px;
   	line-height: 3vh;
   }
 
   h4 {
   	font-size: 2.5vw;
-  	line-height: 20px;
-  	text-align: justify;
+  	line-height: 3vh;
   }
 
   .text {
-    font-size: 2vw;
+    font-size: 2.5vw;
     line-height: 3.5vh;
-    text-align: justify;
   }
 
   .quote {
     	font-size: 3.2vw;
-    	font-style: italic;
     	line-height: 8vh;
   }
 
@@ -328,24 +307,54 @@ header {
   	font-size: 2.2vw;
   	letter-spacing: 3px;
   	line-height: 3vh;
-    margin-top: 5vh;
   }
 
   .info {
-    font-size: 2vw;
+    font-size: 2.5vw;
     line-height: 3vh;
   }
 
 }
 
 @media(max-width: 740px) {
-  header {
-    height: 53vh;
-    grid-column: 1 / 13;
+  .top-grid {
+    display: grid;
+    grid-template: 1fr 1fr / 100%;
   }
 
-  .grid {
-    overflow: visible;
+  .teresa-jenkins {
+    grid-row-start: 2;
+  }
+
+}
+
+@media(max-width: 600px) {
+  h2 {
+    font-size: 4.5vmax;
+  }
+
+  h3 {
+    font-size: 2.2vmax;
+  }
+
+  h4 {
+    font-size: 2.5vmax;
+  }
+
+  .text{
+    font-size: 2.5vmax;
+  }
+
+  .quote {
+    font-size: 3.2vmax;
+  }
+
+  .oprah {
+    font-size: 2.2vmax;
+  }
+
+  .info {
+    font-size: 2.5vmax;
   }
 
 }
